# HQText

./: BUILD.md  README.md
HQTextNative/: .gitignore
HQTextNative/ports/cairo/: cairo_win32_static_mutex_fix.patch  portfile.cmake  vcpkg.json
HQTextNative/src/: CMakeLists.txt  Color.h  Color16.h  DefaultConfigConfig.conf  DefaultFontConfig.h  FontConfig.cpp  FontConfig.h  HorizontalWrapping.h  Plugin.cpp  Plugin.h  RenderData.h  Renderer.cpp  Renderer.h  TextInfo.h  TextSize.h  VerticalAlignment.h  VerticalWrapping.h  libHQText.vcxproj  libHQText.vcxproj.filters
HQTextNative/src/Unity/: IUnityRenderingExtensions.h
HQTextUnity/Assets/ChocDino/HQText-Demos/: ChocDino.HQText.Demos.asmdef  Demo01-RTL.unity  Demo02-Markup.unity  Demo03-CompareQuality 1.unity  Demo04-UIFX.unity  Demo05-Worldspace.unity
HQTextUnity/Assets/ChocDino/HQText/Docs/: Documentation.txt  Third-Party Notices.txt
HQTextUnity/Assets/ChocDino/HQText/Docs/Licenses/: Cairo.txt  FreeType.txt  Fribidi.txt  Glib.txt  Harfbuzz.txt  LIbffi.txt  LibPNG.txt  Libiconv.txt  Pango.txt  bzip2.txt  fontconfig.txt  pcre.txt  pixman.txt  zlib.txt
HQTextUnity/Assets/ChocDino/HQText/Editor/: ChocDino.HQText.Editor.asmdef
HQTextUnity/Assets/ChocDino/HQText/Editor/Scripts/: AnimCollapseSection.cs  HQTextCoreComponentPreview.cs  HQTextCoreEditor.cs  HQTextUGUIEditor.cs  Helpers.cs  Preferences.cs
HQTextUnity/Assets/ChocDino/HQText/Runtime/: ChocDino.HQText.asmdef
HQTextUnity/Assets/ChocDino/HQText/Runtime/Scripts/: AssemblyInfo.cs
HQTextUnity/Assets/ChocDino/HQText/Runtime/Scripts/Components/: HQTextCore.cs  HQTextUGUI.cs
HQTextUnity/Assets/ChocDino/HQText/Runtime/Scripts/Internal/: FontHelper.cs  FontManager.cs  HQTextMethods.cs  HQTextProperties.cs
HQTextUnity/Assets/ChocDino/HQText/Runtime/Scripts/Internal/DataStructures/: DataStructures.cs
HQTextUnity/Assets/ChocDino/HQText/Runtime/Scripts/Internal/Implementation/: ControlCharacters.cs  FastStringBuilder.cs
HQTextUnity/Assets/ChocDino/HQText/Runtime/Scripts/Internal/Interface/: IStringBuilder.cs
HQTextUnity/Assets/ChocDino/HQText/Runtime/Scripts/Internal/Wrapper/: NativePlugin.cs
HQTextUnity/ProjectSettings/: ProjectSettings.asset
